--- a/Draw/Controller/Feed/Cell/DrawInfoCell~ipad.xib
+++ b/Draw/Controller/Feed/Cell/DrawInfoCell~ipad.xib
@@ -1,14 +1,14 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <archive type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="8.00">
 	<data>
-		<int key="IBDocument.SystemTarget">1280</int>
-		<string key="IBDocument.SystemVersion">10K549</string>
-		<string key="IBDocument.InterfaceBuilderVersion">1938</string>
-		<string key="IBDocument.AppKitVersion">1038.36</string>
-		<string key="IBDocument.HIToolboxVersion">461.00</string>
+		<int key="IBDocument.SystemTarget">1296</int>
+		<string key="IBDocument.SystemVersion">11E53</string>
+		<string key="IBDocument.InterfaceBuilderVersion">2182</string>
+		<string key="IBDocument.AppKitVersion">1138.47</string>
+		<string key="IBDocument.HIToolboxVersion">569.00</string>
 		<object class="NSMutableDictionary" key="IBDocument.PluginVersions">
 			<string key="NS.key.0">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
-			<string key="NS.object.0">933</string>
+			<string key="NS.object.0">1179</string>
 		</object>
 		<array key="IBDocument.IntegratedClassDependencies">
 			<string>IBUIImageView</string>
@@ -44,11 +44,11 @@
 						<array class="NSMutableArray" key="NSSubviews">
 							<object class="IBUIImageView" id="596502967">
 								<reference key="NSNextResponder" ref="765286161"/>
-								<int key="NSvFlags">301</int>
-								<string key="NSFrame">{{30, 15}, {665, 700}}</string>
+								<int key="NSvFlags">319</int>
+								<string key="NSFrame">{{128.5, 12}, {470, 491}}</string>
 								<reference key="NSSuperview" ref="765286161"/>
 								<reference key="NSWindow"/>
-								<reference key="NSNextKeyView" ref="210089552"/>
+								<reference key="NSNextKeyView" ref="872528613"/>
 								<bool key="IBUIUserInteractionEnabled">NO</bool>
 								<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 								<object class="NSCustomResource" key="IBUIImage">
@@ -58,11 +58,11 @@
 							</object>
 							<object class="IBUIView" id="210089552">
 								<reference key="NSNextResponder" ref="765286161"/>
-								<int key="NSvFlags">301</int>
-								<string key="NSFrame">{{30, 15}, {665, 700}}</string>
+								<int key="NSvFlags">319</int>
+								<string key="NSFrame">{{128.5, 12.5}, {470, 491}}</string>
 								<reference key="NSSuperview" ref="765286161"/>
 								<reference key="NSWindow"/>
-								<reference key="NSNextKeyView" ref="872528613"/>
+								<reference key="NSNextKeyView" ref="596502967"/>
 								<object class="NSColor" key="IBUIBackgroundColor" id="538587939">
 									<int key="NSColorSpace">3</int>
 									<bytes key="NSWhite">MCAwAA</bytes>
@@ -71,8 +71,8 @@
 							</object>
 							<object class="IBUILabel" id="1073126218">
 								<reference key="NSNextResponder" ref="765286161"/>
-								<int key="NSvFlags">301</int>
-								<string key="NSFrame">{{30, 716}, {633, 33}}</string>
+								<int key="NSvFlags">319</int>
+								<string key="NSFrame">{{30, 505}, {633, 23}}</string>
 								<reference key="NSSuperview" ref="765286161"/>
 								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView"/>
@@ -103,7 +103,7 @@
 							<object class="IBUIActivityIndicatorView" id="872528613">
 								<reference key="NSNextResponder" ref="765286161"/>
 								<int key="NSvFlags">-2147483347</int>
-								<string key="NSFrame">{{344, 334}, {37, 37}}</string>
+								<string key="NSFrame">{{344, 230}, {37, 37}}</string>
 								<reference key="NSSuperview" ref="765286161"/>
 								<reference key="NSWindow"/>
 								<reference key="NSNextKeyView" ref="1073126218"/>
@@ -117,10 +117,10 @@
 								</object>
 							</object>
 						</array>
-						<string key="NSFrameSize">{724, 749}</string>
+						<string key="NSFrameSize">{724, 529}</string>
 						<reference key="NSSuperview" ref="893510759"/>
 						<reference key="NSWindow"/>
-						<reference key="NSNextKeyView" ref="596502967"/>
+						<reference key="NSNextKeyView" ref="210089552"/>
 						<reference key="IBUIBackgroundColor" ref="538587939"/>
 						<bool key="IBUIOpaque">NO</bool>
 						<bool key="IBUIClipsSubviews">YES</bool>
@@ -129,7 +129,7 @@
 						<string key="targetRuntimeIdentifier">IBCocoaTouchFramework</string>
 					</object>
 				</array>
-				<string key="NSFrameSize">{724, 750}</string>
+				<string key="NSFrameSize">{724, 530}</string>
 				<reference key="NSSuperview"/>
 				<reference key="NSWindow"/>
 				<reference key="NSNextKeyView" ref="765286161"/>
@@ -286,12 +286,16 @@
 		</object>
 		<int key="IBDocument.localizationMode">0</int>
 		<string key="IBDocument.TargetRuntimeIdentifier">IBCocoaTouchFramework</string>
+		<object class="NSMutableDictionary" key="IBDocument.PluginDeclaredDependencyDefaults">
+			<string key="NS.key.0">com.apple.InterfaceBuilder.CocoaTouchPlugin.iPhoneOS</string>
+			<real value="1296" key="NS.object.0"/>
+		</object>
 		<bool key="IBDocument.PluginDeclaredDependenciesTrackSystemTargetVersion">YES</bool>
 		<int key="IBDocument.defaultPropertyAccessControl">3</int>
 		<object class="NSMutableDictionary" key="IBDocument.LastKnownImageSizes">
 			<string key="NS.key.0">unloadbg.png</string>
 			<string key="NS.object.0">{175, 170}</string>
 		</object>
-		<string key="IBCocoaTouchPluginVersion">933</string>
+		<string key="IBCocoaTouchPluginVersion">1179</string>
 	</data>
 </archive>
